2005-02-10  Callum McKenzie  <callum@physics.otago.ac.nz>

	* events.c: Fix double clicking under click-to-move mode so that
	we only drag valid sequences. This fixes bug #164638.

2005-02-01  Callum McKenzie  <callum@physics.otago.ac.nz>

	* dialog.c (show_rules_options_dialog): Fix a call to
	gtk_dialog_add_buttons by adding a NULL. Of course the function it
	is in never gets called but this is still a good idea. Thanks to
	meissner@suse.de (bug #165903).

2005-01-24  Callum McKenzie  <callum@physics.otago.ac.nz>

	* menu.c: Back out the menubar icon experiments.

2005-01-12  Callum McKenzie  <callum@physics.otago.ac.nz>

	* rules/scorpion.scm: Simplify the game-over check and make
	correct-sequence check for card visibility. This has the effect of
	fixing bug #162917 where a flipped-over king was incorrectly
	assumed to be part of the a sequence.

2005-01-03  Richard Hoelscher  <rah@rahga.com>

	* card.c (get_preimage): Preimage API update, uri -> file.

2005-01-01  Callum McKenzie  <callum@physics.otago.ac.nz>

	* dialog.c: Swap the quit and new game buttons on the end of game
	dialog in an attempt to make the game more addictive.

2004-12-16  Callum McKenzie  <callum@physics.otago.ac.nz>

	* rules/will_o_the_wisp.scm (button-released): Don't flip the top
	of the stack if we haven't actually moved a card. Bug #160029.

	* rules/spider.scm: 
	* rules/spider_one_suit.scm:
	* rules/spider_two_suit.scm (game-won): Recognise an additional
	end-of-game condition where the cards are all stacked. See bug
	#159639 for a discussion (and credit, i.e. Jeff Bailey).

2004-12-13  Callum McKenzie  <callum@physics.otago.ac.nz>

	* card.c: gdk_pixbuf_render_pixmap_and_mask -> gdk_pixbuf_render_pixmap_and_mask_for_colormap.

Thu Dec  9 00:20:43 2004  Jonathan Blandford  <jrb@gnome.org>

	* rules/*scm: Move all the games into a subdir.

2004-12-01  Callum McKenzie  <callum@physics.otago.ac.nz>

	* dialog.c: Put the quit option back on the no more moves