@@ -49,7 +49,7 @@
   <sect2>Rules</sect2>
   <para>
     Remove cards in pairs that add up to eleven.  Kings are paired off
-    with Queens.  Jacks are paired off by themselves.
+    with Queens.  Jacks are paired off with other Jacks.
   </para>
 
   <sect2>Options</sect2>
