@@ -1,3 +1,8 @@
+2005-02-10  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* C/gay_gordons.xml: Clarify the rules about pairing jacks with
+	other jacks.
+
 2004-12-16  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* C/spider_one_suit.xml: Fix a typo, one suit spider only has one
