@@ -1,5 +1,10 @@
 2005-02-10  Callum McKenzie  <callum@physics.otago.ac.nz>
 
+        * rules/helsinki.scm
+	* rules/neighbor.scm: Fix the button-pressed and button-clicked
+	functions to return the correct values. This was affecting
+	click-to-move, see bug #166815.
+
 	* events.c: Fix double clicking under click-to-move mode so that
 	we only drag valid sequences. This fixes bug #164638.
 
